# showcase_constructor

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.ralphex/agents/: documentation.txt  implementation.txt  quality.txt  simplification.txt  testing.txt
.ralphex/prompts/: codex_review.txt  custom_review.txt  finalize.txt  make_plan.txt  review_first.txt  review_second.txt  task.txt
docs/decisions/: admin-api-lifecycle.md  draft-constructor-editing.md  mvp-boundaries.md
docs/plans/: README.md
docs/plans/backlog/: admin-api-lifecycle-decision-gate.md  custom-code-preview-publish-public-read-path.md  decision-records-mvp-implementation-admin-showcase.md  draft-constructor-editing.md  mvp-product-security-tech-decisions.md  owner-aware-auth-boundary-admin-api.md  postgres-mvp-infrastructure.md
docs/plans/completed/: decision-records-mvp-implementation-admin-showcase.md  postgres-mvp-infrastructure.md  public-config-contract-foundation.md
docs/references/examples/: api.md  config.md  core.md  di.md  main_py.md  migrations.md  pyproject.toml  ralphex.md  storages.md  tests.md
src/: main.py
src/api/: app.py  boundary.py  exceptions.py  routers.py
src/api/admin_auth/: endpoints.py  schemas.py
src/api/auth/: deps.py  schemas.py
src/api/common/: endpoints.py
src/api/public_config/: endpoints.py  schemas.py
src/api/showcases/: endpoints.py  schemas.py
src/config/: constants.py  settings.py
src/core/: exceptions.py  storages.py
src/core/admin_auth/: exceptions.py  schemas.py
src/core/public_config/: projections.py  schemas.py  use_cases.py
src/core/showcases/: cache.py  exceptions.py  schemas.py  use_cases.py
src/di/: container.py
src/di/providers/: admin_auth.py  database.py  general.py  showcases.py
src/migrations/: alembic.ini  commands.py  env.py
src/migrations/versions/: 0001_migration_smoke.py  0002_create_draft_constructor_tables.py  0003_create_publication_snapshot_tables.py
src/services/: showcases.py
src/storages/: database.py  models.py  showcases.py
src/tests/: conftest.py  fixtures.py
src/tests/api/: test_admin_auth.py  test_admin_showcase_blocks.py  test_admin_showcase_draft_settings.py  test_admin_showcase_lifecycle_routes.py  test_admin_showcase_offers.py  (+8 more)
(+21 files in other folders)
